--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Lazy Neumorphic Calculator">
+    <meta property="og:description" content="Some fun with Neumorphic UI design + vanilla JS pratice">
+    <meta property="og:image" content="https://dl.dropbox.com/s/et76otynximrrmt/Screen%20Shot%202020-11-09%20at%202.22.04%20PM.png">    
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
