--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Lazy Neumorphic Calculator">
     <meta property="og:description" content="Some fun with Neumorphic UI design + vanilla JS pratice">
-    <meta name="twitter:card" content="summary_large_image"><!-- required -->
-    <meta name="twitter:site" content="@BricePiet"><!-- required -->
-    <meta name="twitter:title" content="Lazy Neumorphic Calculator"><!-- required -->
-    <meta name="twitter:description" content="JS practice project and fun with neumorphic UI design"><!-- optional -->
-    <meta name="twitter:image" content="https://dl.dropbox.com/s/et76otynximrrmt/Screen%20Shot%202020-11-09%20at%202.22.04%20PM.png"><!-- optional -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Lazy Neumorphic Calculator">
+    <meta name="twitter:description" content="JS practice project and fun with neumorphic UI design">
+    <meta name="twitter:image" content="https://dl.dropbox.com/s/et76otynximrrmt/Screen%20Shot%202020-11-09%20at%202.22.04%20PM.png">
     <meta property="og:image" content="https://dl.dropbox.com/s/et76otynximrrmt/Screen%20Shot%202020-11-09%20at%202.22.04%20PM.png">    
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
