--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Lazy Neumorphic Calculator">
     <meta name="twitter:description" content="JS practice project and fun with neumorphic UI design">
-    <meta name="twitter:image" content="https://dl.dropbox.com/s/et76otynximrrmt/Screen%20Shot%202020-11-09%20at%202.22.04%20PM.png">
+    <meta name="twitter:image" content="http://dl.dropbox.com/s/et76otynximrrmt/Screen%20Shot%202020-11-09%20at%202.22.04%20PM.png">
     <meta property="og:image" content="https://dl.dropbox.com/s/et76otynximrrmt/Screen%20Shot%202020-11-09%20at%202.22.04%20PM.png">    
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
